# openvault

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openvault/: cli.py  step_parser.py
tests/: test_cli.py  test_step_parser.py
